[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "salad-cloud-sdk"
version = "0.9.0-alpha.1"
license = { text = "MIT" }
description = """The SaladCloud REST API. Please refer to the [SaladCloud API Documentation](https://docs.salad.com/api-reference) for more details."""
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries"
]
dependencies = [
    "requests>=2.31.0"
]

[project.urls]
Homepage = "https://github.com/saladtechnologies/salad-cloud-sdk-python"
Documentation = "https://docs.salad.com"
Repository = "https://github.com/SaladTechnologies/salad-cloud-sdk-python.git"
Issues = "https://github.com/SaladTechnologies/salad-cloud-sdk-python/issues"
